# parallax

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  IMPLEMENTING.md  README.md  commitlint.config.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  python-deps-refresh.yml
.humanlayer/: workspace.json
core/: AGENTS.md
core/schemas/: compatibility-case.schema.json  conformance-adapter.schema.json  metamodel.schema.json  operation.schema.json  write-instruction.schema.json
core/spec/: 00-overview.md  api-conformance-contract.md  conformance-adapter-contract.md  cross-process-coherence.md  database-provider-test-contract.md  dependency-graph.md  language-spec-template.md  m-agg.md  m-api-conformance.md  m-audit-write.md  m-auto-retry.md  m-batch-write.md  m-bitemp-write.md  m-business-only.md  m-cascade-delete.md  m-case-format.md  m-coherence.md  m-conformance-adapter.md  m-core.md  m-db-error.md  m-db-port.md  m-deep-fetch.md  m-descriptor.md  m-detach.md  m-dialect.md  m-identity-map.md  m-inheritance.md  m-metamodel.md  m-model-formation.md  m-navigate.md  m-op-algebra.md  m-op-list.md  m-opt-lock.md  m-perf-bench.md  m-pk-gen.md  m-process-cache.md  m-read-lock.md  m-relationship.md  m-snapshot-read.md  m-sql-agg.md  (+23 more)
docs/adr/: 0001-find-returns-result-collections.md  0001-typescript-uses-one-fluent-expression-dsl.md  0002-includes-load-relationship-paths.md  0002-projections-return-plain-data.md  0002-typescript-find-always-returns-parallax-list.md  (+82 more)
docs/misc/: reladomo-research.md  (+1 more)
languages/: AGENTS.md
languages/python/: .gitignore  AGENTS.md  CONTEXT.md  GUIDE.md  pyproject.toml  pyrightconfig.json
languages/python/docs/: usage-guide.md
languages/python/docs/adr/: 0001-python-is-class-first-over-a-metamodel-hub.md  0002-snapshot-nodes-are-frozen-entity-instances.md  0003-writes-are-copy-provenance-row-inputs.md  0004-transactions-are-callback-only.md  0005-python-v1-is-sync-only-on-psycopg3.md  0006-distributions-share-the-parallax-namespace.md  0007-entity-classes-compose-into-explicit-sealed-metamodel-hubs.md
languages/python/spec/: python.md
languages/python/tests/: conftest.py  frontend_probes.py  inheritance_models.py  mirrored_models.py  snapshot_models.py  value_object_models.py
languages/python/tests/api_conformance/: example_models.py  test_boundary_run.py  test_copy_to_row_no_drift.py  test_coverage_partition.py  test_descriptor_no_drift.py  test_graph_story_no_drift.py  test_operation_no_drift.py  test_stale_web_edit.py  test_story_run.py  test_write_no_drift.py
languages/python/tests/api_surface/: public_api.json  test_public_api.py
languages/python/tests/artifact/: test_wheels.py
languages/python/tests/clean_install/: test_clean_install.py
languages/python/tests/conformance/: test_compile_sweep.py  test_rejected_sweep.py  test_run_sweep.py  test_story_run.py
languages/python/tests/dialect/: test_dialect_contract.py
languages/python/tests/provider/: test_provider_contract.py
languages/python/tests/unit/: _transact_support.py  inheritance_models.py  snapshot_models.py  test_adapter.py  test_api_suite.py  test_batch_write.py  test_boundary_runner.py  test_case_format.py  test_check_scope_ownership.py  test_claim.py  test_class_body_annotations.py  test_cli.py  test_concurrency_runner.py  test_core_base.py  test_corpus_models.py  test_dag_sync.py  test_database_transact.py  test_db_error.py  test_deep_fetch.py  test_descriptor_records.py  test_descriptor_serde.py  test_descriptor_validate.py  test_engine.py  test_entity_frontend.py  test_entity_registry.py  test_fields.py  test_inheritance.py  test_inheritance_frontend.py  test_materialize.py  test_model_copy.py  test_navigate.py  test_op_algebra.py  test_op_algebra_validate.py  test_opt_lock.py  test_pk_gen.py  test_postgres_adapter.py  test_provision.py  test_read_lock.py  test_scripted_clock.py  test_smoke.py  (+30 more)
languages/python/tools/: check_dag_sync.py  check_scope_ownership.py  check_untracked_sources.py
languages/python/typings/testcontainers/: postgres.pyi
reference-harness/: AGENTS.md  README.md  pyproject.toml
reference-harness/scripts/: migrate_case_format.py
reference-harness/src/reference_harness/: __init__.py  benchmark.py  case.py  case_comment_check.py  case_format_vocab_check.py  case_runner.py  data_loader.py  ddl_builder.py  dep_graph_check.py  descriptor_contract_check.py  errors.py  inheritance.py  language_spec_validate.py  matrix.py  neutral_type_vocab_check.py  op_validate.py  operation_references.py  paths.py  predicate_write_validate.py  retired_vocab_check.py  schema_validate.py  schemas.py  serde.py  slice_inspect.py  sql_lint.py  sql_normalize.py  value_object_resolve.py  write_validate.py
reference-harness/src/reference_harness/providers/: __init__.py  mariadb.py  postgres.py
reference-harness/tests/: test_benchmark.py  test_bitemporal.py  test_boundary_schema.py  test_buffered_write.py  test_case_comment_check.py  test_case_format_vocab_check.py  test_case_freeze.py  test_case_schema.py  test_coherence.py  test_compatibility.py  test_compile_eligibility.py  test_concurrency_success.py  test_conflict.py  test_conformance_adapter_schema.py  test_dep_graph.py  test_descriptor_contract_check.py  test_dialect_binds.py  test_dialect_seam.py  test_equivalent_encodings.py  test_error_classification.py  test_graph_comparison.py  test_group_precedence.py  test_inheritance_read_oracle.py  test_language_spec_validate.py  test_metamodel_extensions.py  test_neutral_type_vocab_check.py  test_pk_generation.py  test_predicate_write.py  test_rejected.py  test_retired_vocab_check.py  test_row_comparison.py  test_scenario.py  test_slice_inspect.py  test_sql_normalize.py  test_value_object_graph.py  test_write_instruction_schema.py  test_write_schema_sharing.py  test_write_sequence.py
reference-harness/tests/fixtures/language-specs/: invalid-cases.yaml  valid-managed.md  valid-snapshot.md
(+891 files in other folders)
