[project]
name = "reference-harness"
version = "0.0.0"
description = "The canonical m-case-format compatibility runner for parallax. Tooling, NOT an ORM: it never compiles operations to SQL — it proves the suite is internally consistent and that golden SQL is correct against real databases."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "testcontainers>=4.0",
    "psycopg[binary]>=3.3.4",
    "pymysql>=1.1",
    "pyyaml>=6.0",
    "sqlglot>=25.0",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31",
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reference_harness"]

[tool.uv]
# Keep dev tooling in the default sync so `uv run pytest`, `uv run ruff`, and
# `uv run basedpyright` work without an extra flag.
default-groups = ["dev"]

[dependency-groups]
dev = [
    "basedpyright>=1.31",
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.basedpyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
