# Parallax Python — uv workspace root.
#
# This is a virtual project (no `[build-system]`, `tool.uv.package = false`): it
# is never itself built or published. It exists to group the four workspace
# distributions under `packages/*`, own the shared dev toolchain and tool
# configuration (§10 of `spec/python.md`), and host the generated import-linter
# forbidden-edge complement (`tools/check_dag_sync.py`, §7).
[project]
name = "parallax-python"
version = "0.0.0"
description = "uv workspace root for the Parallax Python target (slice-snapshot-1). Not published."
requires-python = ">=3.12"
dependencies = [
    "parallax-core",
    "parallax-snapshot",
    "parallax-postgres",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
parallax-core = { workspace = true }
parallax-snapshot = { workspace = true }
parallax-postgres = { workspace = true }
parallax-conformance = { workspace = true }

[dependency-groups]
# `parallax-conformance` is development-only (§8); it lives here rather than in
# the production dependency set so the clean-install topology proofs can show it
# absent from every production install.
dev = [
    "parallax-conformance",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "diff-cover>=9.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "import-linter>=2.1",
    "vulture>=2.11",
    "griffe>=1.3",
    "twine>=5.1",
    "pip-audit>=2.7",
    "jsonschema>=4.21",
    "testcontainers>=4.0",
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.21",
]

# ---------------------------------------------------------------------------
# pytest — §6 markers and collection.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["tools", "tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: no container/socket I/O; pure in-process behaviour",
    "dialect: Docker-free dialect contract suite (pure m-dialect strategy)",
    "compile_sweep: Docker-free compile of every compile-eligible claimed case",
    "adapter_smoke: real psycopg adapter smoke checks (Docker)",
    "provider_contract: provider/matrix contract suite (Docker)",
    "conformance: the pg-full run profile against a real database (Docker)",
    "api_conformance: API Conformance Suite + Usage Guide (Docker)",
    "artifact: built-wheel content and public-export health checks",
    "clean_install: clean-venv production install topology proofs",
    "api_surface: griffe public-API snapshot diff",
]

# ---------------------------------------------------------------------------
# Coverage — branch mode; targets the shipped `parallax.*` distributions
# (product code plus the dev-only conformance CLI, per §10). Build/CI tooling
# under `tools/` is exercised by the Phase 1 canary unit tests but is not
# product code, so it is not part of the product-coverage gate.
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source_pkgs = ["parallax"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Ruff — lint + deterministic formatter (§10).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["packages/parallax-core/src", "packages/parallax-snapshot/src", "packages/parallax-postgres/src", "packages/parallax-conformance/src", "tools", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["parallax"]

# ---------------------------------------------------------------------------
# Vulture — dead-code scan. `main` is the packaging-metadata console-script
# entry point (referenced by `[project.scripts]`, not by in-repo code); the
# compensating public-surface check is the api_surface griffe snapshot (§10).
# ---------------------------------------------------------------------------
[tool.vulture]
paths = ["packages", "tools"]
min_confidence = 80
ignore_names = ["main"]

# >>> check_dag_sync.py: BEGIN GENERATED IMPORT-LINTER CONTRACTS >>>
# Generated by tools/check_dag_sync.py from core/spec/modules.md and spec/python.md §7 — do not edit by hand.
# Regenerate with: uv run python tools/check_dag_sync.py --write
[tool.importlinter]
root_packages = [
    "parallax.conformance",
    "parallax.core",
    "parallax.postgres",
    "parallax.snapshot",
]

[[tool.importlinter.contracts]]
name = "parallax.core.audit_write may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.audit_write"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.auto_retry may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.auto_retry"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.base may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.base"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.descriptor",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.batch_write may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.batch_write"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.bitemp_write may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.bitemp_write"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.db_error may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.db_error"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.deep_fetch",
    "parallax.core.descriptor",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.db_port may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.db_port"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.descriptor",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.deep_fetch may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.deep_fetch"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.descriptor may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.descriptor"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.dialect may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.dialect"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.descriptor",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.entity may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.entity"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.inheritance may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.inheritance"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.navigate may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.navigate"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.op_algebra may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.op_algebra"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.opt_lock may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.opt_lock"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.pk_gen may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.pk_gen"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.read_lock may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.read_lock"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.sql_gen may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.sql_gen"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.temporal_read may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.temporal_read"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.unit_work may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.unit_work"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.core.value_object may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.core.value_object"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.db_port",
    "parallax.core.deep_fetch",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.postgres",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.postgres may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.postgres"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.deep_fetch",
    "parallax.core.descriptor",
    "parallax.core.entity",
    "parallax.core.inheritance",
    "parallax.core.navigate",
    "parallax.core.op_algebra",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.temporal_read",
    "parallax.core.unit_work",
    "parallax.core.value_object",
    "parallax.snapshot.handle",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.handle may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.handle"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.pk_gen",
    "parallax.core.value_object",
    "parallax.postgres",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.handle._family may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.handle._family"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.handle._keyed_sql may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.handle._keyed_sql"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.handle._wrap may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.handle._wrap"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.dialect",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.handle._write_lowering may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.handle._write_lowering"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.handle._write_types may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.handle._write_types"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.db_error",
    "parallax.core.deep_fetch",
    "parallax.core.entity",
    "parallax.core.navigate",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.materialize",
]

[[tool.importlinter.contracts]]
name = "parallax.snapshot.materialize may import only its permitted dependencies"
type = "forbidden"
source_modules = ["parallax.snapshot.materialize"]
forbidden_modules = [
    "parallax.conformance",
    "parallax.core.audit_write",
    "parallax.core.auto_retry",
    "parallax.core.batch_write",
    "parallax.core.bitemp_write",
    "parallax.core.db_error",
    "parallax.core.dialect",
    "parallax.core.entity",
    "parallax.core.opt_lock",
    "parallax.core.pk_gen",
    "parallax.core.read_lock",
    "parallax.core.sql_gen",
    "parallax.core.value_object",
    "parallax.postgres",
    "parallax.snapshot.handle",
]
# <<< check_dag_sync.py: END GENERATED IMPORT-LINTER CONTRACTS <<<

# Additive private source-order enforcement; generated contracts remain the core behavioral-DAG authority.
[[tool.importlinter.contracts]]
name = "parallax.core.sql_gen private modules are layered"
type = "layers"
layers = [
    "parallax.core.sql_gen._compile",
    "parallax.core.sql_gen._predicate",
    "parallax.core.sql_gen._navigation",
    "parallax.core.sql_gen._inheritance",
    "parallax.core.sql_gen._context",
]

[[tool.importlinter.contracts]]
name = "parallax.core.sql_gen private modules must not import the package root"
type = "forbidden"
source_modules = [
    "parallax.core.sql_gen._compile",
    "parallax.core.sql_gen._predicate",
    "parallax.core.sql_gen._navigation",
    "parallax.core.sql_gen._inheritance",
    "parallax.core.sql_gen._context",
]
forbidden_modules = ["parallax.core.sql_gen"]
as_packages = false
